--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 											 	 												<h1>Host your website in <br class="d-none d-lg-block">less than 5minutes.</h1>
 											 	 												<p>With hosterr, get your website up and running in no less than 5<br class="d-sm-none d-lg-block"> minutes with the most competitive pricing packages available<br class="d-sm-none d-lg-block"> online</p>
 											 	 												<div class=" mt-3 d-grid d-md-inline">
-											 	 																<input type="text" placeholder="Enter email address" class="col-12 col-md-6 col-lg-8 me-md-2 mb-3 mb-md-0">
+											 	 																<input type="email" placeholder="Enter email address" class="col-12 col-md-6 col-lg-8 me-md-2 mb-3 mb-md-0">
 											 	 																<button type="button" id="nav-button" class="btn btn-primary mt-lg-3"class="col-12 col-md-3 mt-md-0  d-block">Join waitlist</button><br>
 											 	 												</div>
 											 	 												<span id="below-waitlist"><img src="./Assets/Checkmark.svg" alt="checkmark "> No spam ever unsubscribe anytime</span>
